--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   </style>
   <link rel="shortcut icon" href="images/apple-touch-ri-logo-white-120x120.png">
   <script type="text/javascript" src="js/hidebib.js"></script>
-  <title>Tairan He</title>
-  <meta name="Tairan He's Homepage" http-equiv="Content-Type" content="Tairan He's Homepage">
+  <title>Zhuoyun Du</title>
+  <meta name="Zhuoyun Du's Homepage" http-equiv="Content-Type" content="Zhuoyun Du's Homepage">
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
   <!-- Start : Google Analytics Code -->
   <script>
