--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
   </p>
 
   <tr>
-    <td width="30%" valign="top"><a href="images/zhuoyun_photo.jpg"><img src="images/zhuoyun_photo.jpg" width="100%" style="border-radius:15px"></a>
+    <td width="30%" valign="top"><a href="images/zhuoyun_du.jpg"><img src="images/zhuoyun_du.jpg" width="100%" style="border-radius:15px"></a>
     <p align=center>
-    | <a href="data/ZhuoyunDu_CV.pdf">CV</a> |
+    | <a href="assets/cv.pdf">CV</a> |
     <a href="mailto:xiaodu.flying@gmail.com">Email</a> |
     <a href="https://scholar.google.com/citations?user=YOUR_SCHOLAR_ID">Google Scholar</a> |
     <br/>
