--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <tr>
     <td width="40%" valign="top" align="center">
-      <img src="images/evopatient.png" alt="EvoPatient" width="90%" style="border-radius:15px;">
+      <img src="images/evopatient_overview.png" alt="EvoPatient" width="90%" style="border-radius:15px;">
     </td>
     <td width="60%" valign="top">
       <p><a href="https://arxiv.org/abs/2412.11716" id="EVOPATIENT">
@@ -220,7 +220,7 @@
 
   <tr>
     <td width="40%" valign="top" align="center">
-      <img src="images/cross_team.png" alt="Cross Team" width="90%" style="border-radius:15px;">
+      <img src="images/aggregate_ctc.png" alt="Cross Team" width="90%" style="border-radius:15px;">
     </td>
     <td width="60%" valign="top">
       <p><a href="https://arxiv.org/abs/2406.08979" id="CROSSTEAM">
@@ -250,7 +250,7 @@
 
   <tr>
     <td width="40%" valign="top" align="center">
-      <img src="images/scaling_mas.png" alt="Scaling MAS" width="90%" style="border-radius:15px;">
+      <img src="images/macnet.png" alt="Scaling MAS" width="90%" style="border-radius:15px;">
     </td>
     <td width="60%" valign="top">
       <p><a href="https://arxiv.org/abs/2406.07155" id="SCALINGMAS">
@@ -280,7 +280,7 @@
 
   <tr>
     <td width="40%" valign="top" align="center">
-      <img src="images/asymmetry.png" alt="Information Asymmetry" width="90%" style="border-radius:15px;">
+      <img src="images/asymmetry.svg" alt="Information Asymmetry" width="90%" style="border-radius:15px;">
     </td>
     <td width="60%" valign="top">
       <p><a href="https://arxiv.org/abs/2406.14928" id="ASYMMETRY">
