--- a/index.html
+++ b/index.html
@@ -313,8 +313,54 @@
     </p>
   </td></tr>
 </table>
+    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+  <tr><td><sectionheading>&nbsp;&nbsp;Selected Projects</sectionheading></td></tr>
+</table>
 
-<table width="30%" align="center" border="0" cellspacing="0" cellpadding="10">
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
+  <tr>
+    <td width="40%" valign="top" align="center">
+      <a href="https://thinkwee.top/multiagent_ebook">
+        <img src="images/web_thunlp.jpg" alt="Multi-Agent eBook" width="90%" style="border-radius:15px;">
+      </a>
+    </td>
+    <td width="60%" valign="top">
+      <p><a href="https://thinkwee.top/multiagent_ebook" id="MULTIAGENT_EBOOK">
+      <heading>Multi-Agent Research Interactive E-book</heading></a><br>
+      </p>
+      <p align="justify">
+      A comprehensive collection of research papers on LLM-based multi-agent systems presented in an interactive e-book format. Organizes cutting-edge research into task-solving-oriented and social-simulation-oriented systems, covering agent communication, organizational structures, and co-evolution mechanisms.
+      </p>
+      <p>
+      <a href="https://thinkwee.top/multiagent_ebook">interactive ebook</a> |
+      <a href="https://github.com/OpenBMB/ChatDev/blob/main/MultiAgentEbook/papers.csv">download papers</a>
+      </p>
+    </td>
+  </tr>
+
+  <tr>
+    <td width="40%" valign="top" align="center">
+      <a href="https://github.com/OpenBMB/ChatDev">
+        <img src="images/paper/logo.png" alt="ChatDev & Croto & MACNET" width="90%" style="border-radius:15px;">
+      </a>
+    </td>
+    <td width="60%" valign="top">
+      <p><a href="https://github.com/OpenBMB/ChatDev" id="CHATDEV">
+      <heading>ChatDev & Croto & MACNET</heading></a><br>
+      </p>
+      <p align="justify">
+        Actively contributed to the development of ChatDev with <a href="https://github.com/OpenBMB/ChatDev/"></a> <img src="https://img.shields.io/github/stars/OpenBMB/ChatDev.svg" alt="stars"> and its extended branches, serving as the leader for one key branch.
+      </p>
+      <p>
+      <a href="https://github.com/OpenBMB/ChatDev">code</a> |
+      <a href="https://arxiv.org/abs/2307.07924">paper</a>
+      </p>
+    </td>
+  </tr>
+
+</table>
+
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>&nbsp;&nbsp;Academic Service</sectionheading></td></tr>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
@@ -323,7 +369,7 @@
   </td></tr>
 </table>
 
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<table width="30%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody>
       <tr>
           <td style="padding:0px">
