--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <br/>
     | <a href="https://github.com/XiaoDu-flying">GitHub</a> | 
     <a href="https://xiaodu-flying.notion.site/Welcome-to-my-blog-1d6df6af187d4b3ea1020fcc73aeec43">Blog</a> |
+      <a href="https://www.linkedin.com/in/zhuoyun-du-62a372313/?lipi=urn%3Ali%3Apage%3Ad_flagship3_people%3Bjn1Pz0sxRRiGuVWzPtaEXA%3D%3D">Linkedin</a> |
     </p>
     </td>
     <td width="70%" valign="top" align="justify">
@@ -144,7 +145,7 @@
 <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>&nbsp;&nbsp;News</sectionheading></td></tr>
+  <tr><td><sectionheading>&nbsp;&nbsp;News & Timeline</sectionheading></td></tr>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
   <tr><td>
@@ -296,6 +297,7 @@
   </tr>
 
 </table>
+    <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>&nbsp;&nbsp;Professional Experience</sectionheading></td></tr>
