--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
       <p>Currently, I'm working with <a href="https://zjuvag.org/authors/weichen/">Prof. Wei Chen</a> at the <a href="https://zjuvai.cn/">ZJUVAI</a> (State Key Lab of CAD&CG). Previously, I had the privilege of serving as a Research Assistant in the <a href="https://github.com/OpenBMB/ChatDev">ChatDev</a> project at <a href="https://www.tsinghua.edu.cn">Tsinghua University</a>, under the mentorship of <a href="https://nlp.csai.tsinghua.edu.cn/~lzy/">Prof. Zhiyuan Liu</a> and <a href="https://qianc62.github.io/">Prof. Chen Qian</a> from <a href="https://nlp.csai.tsinghua.edu.cn/">THUNLP</a>.
       </p>
 
-      <p>I am actively looking for PhD positions starting in Fall 2027 in the areas of Large Language Models, Multi-Agent Systems, and AI Applications.
+      <p style="background-color: #f5f5f5; padding: 15px; border-radius: 8px; margin: 10px 0;">
+  I am actively looking for PhD positions starting in Fall 2027 in the areas of Large Language Models, Multi-Agent Systems, and Reasoning. I welcome any opportunities, collaborations, or recommendations!
+</p>
 
-      <p><strong>Research Focus:</strong> I'm dedicated to developing LLM-based autonomous agents capable of effectively tackling multi-step complex tasks. My research has evolved from software development and creative applications to exploring broader implementations, with a particular fascination for LLM-based multi-agent collaboration systems.</p>
+      <p><strong>Research Focus:</strong> I'm dedicated to developing LLM-based autonomous agents capable of effectively tackling multi-step complex tasks. My research has evolved from software development, creative applications and latent space reasoning to exploring broader implementations, with a particular fascination for LLM-based multi-agent collaboration systems.</p>
 
       <p>Email: xiaodu.flying [AT] gmail.com
       </p>
@@ -172,7 +174,7 @@
 <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>&nbsp;&nbsp;Selected Publications</sectionheading></td></tr>
+  <tr><td><sectionheading>Selected Publications</sectionheading></td></tr>
 </table>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
@@ -297,10 +299,10 @@
   </tr>
 
 </table>
-    <hr/>
+<hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>&nbsp;&nbsp;Professional Experience</sectionheading></td></tr>
+  <tr><td><sectionheading>Professional Experience</sectionheading></td></tr>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
   <tr><td>
@@ -316,7 +318,7 @@
   </td></tr>
 </table>
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>&nbsp;&nbsp;Selected Projects</sectionheading></td></tr>
+  <tr><td><sectionheading>Selected Projects</sectionheading></td></tr>
 </table>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
@@ -363,7 +365,7 @@
 </table>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>&nbsp;&nbsp;Academic Service</sectionheading></td></tr>
+  <tr><td><sectionheading>Academic Service</sectionheading></td></tr>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
   <tr><td>
