--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
   <tr>
     <td width="30%" valign="top"><a href="images/zhuoyun_du.jpg"><img src="images/zhuoyun_du.jpg" width="100%" style="border-radius:15px"></a>
     <p align=center>
-    | <a href="assets/cv.pdf">CV</a> |
-    <a href="mailto:xiaodu.flying@gmail.com">Email</a> |
+<!--    | <a href="assets/cv.pdf">CV</a> |-->
+    | <a href="mailto:duzy@zju.edu.cn">Email</a> |
     <a href="https://scholar.google.com/citations?user=YOUR_SCHOLAR_ID">Google Scholar</a> |
     <br/>
     | <a href="https://github.com/XiaoDu-flying">GitHub</a> | 
@@ -127,16 +127,33 @@
     </p>
     </td>
     <td width="70%" valign="top" align="justify">
-      <p>I am a first-year graduate student at the <a href="https://www.zju.edu.cn/">Zhejiang University</a>, majoring in <strong>Computer Science</strong>. My passion lies at the intersection of cutting-edge AI research and real-world applications.
+      <p>
+        I am a first-year graduate student in <strong>Computer Science</strong> at
+        <a href="https://www.zju.edu.cn/">Zhejiang University</a>. I currently work with <a href="https://zjuvag.org/authors/weichen/">Prof. Wei Chen</a> at
+        <a href="https://zjuvai.cn/">ZJUVAI</a> within the <a href="http://www.en.cs.zju.edu.cn/"><strong><em>State Key Laboratory of CAD&CG</em></strong></a>.
       </p>
-      <p>Currently, I'm working with <a href="https://zjuvag.org/authors/weichen/">Prof. Wei Chen</a> at the <a href="https://zjuvai.cn/">ZJUVAI</a> (State Key Lab of CAD&CG). Previously, I had the privilege of serving as a Research Assistant in the <a href="https://github.com/OpenBMB/ChatDev">ChatDev</a> project at <a href="https://www.tsinghua.edu.cn">Tsinghua University</a>, under the mentorship of <a href="https://nlp.csai.tsinghua.edu.cn/~lzy/">Prof. Zhiyuan Liu</a> and <a href="https://qianc62.github.io/">Prof. Chen Qian</a> from <a href="https://nlp.csai.tsinghua.edu.cn/">THUNLP</a>.
+
+      <p>
+        Previously, I was a research assistant on the
+        <a href="https://github.com/OpenBMB/ChatDev">ChatDev</a> project in the
+        <a href="https://www.tsinghua.edu.cn">Department of Computer Science and Technology, Tsinghua University</a>,
+        advised by <a href="https://nlp.csai.tsinghua.edu.cn/~lzy/">Prof. Zhiyuan Liu</a> and
+        <a href="https://qianc62.github.io/">Prof. Chen Qian</a> at
+        <a href="https://nlp.csai.tsinghua.edu.cn/">THUNLP</a> within the <a href="https://www.bnrist.tsinghua.edu.cn/bnristen/index.htm"> <strong><em>State Key Laboratory of Intelligent Technology and Systems</em></strong></a>.
       </p>
 
       <p style="background-color: #f5f5f5; padding: 15px; border-radius: 8px; margin: 10px 0;">
-  I am actively looking for PhD positions starting in Fall 2027 in the areas of Large Language Models, Multi-Agent Systems, and Reasoning. I welcome any opportunities, collaborations, or recommendations!
-</p>
+        I am actively seeking <strong>Ph.D. positions starting in Fall 2027</strong> in
+        <strong>Large Language Models</strong>, <strong>Multi-Agent Systems</strong>, and <strong>Reasoning</strong>.
+        I welcome opportunities, collaborations, and referrals!
+      </p>
 
-      <p><strong>Research Focus:</strong> I'm dedicated to developing LLM-based autonomous agents capable of effectively tackling multi-step complex tasks. My research has evolved from software development, creative applications and latent space reasoning to exploring broader implementations, with a particular fascination for LLM-based multi-agent collaboration systems.</p>
+      <p>
+        <strong>Research Focus:</strong> How to design LLM-based autonomous agents that
+        <strong>collaborate effectively</strong> to tackle complex, multi-step tasks.
+        My recent work spans software-development agents, creative applications, agent
+        self-evolution, and latent-space reasoning.
+      </p>
 
       <p>Email: xiaodu.flying [AT] gmail.com
       </p>
@@ -331,7 +348,7 @@
 <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>Professional Experience</sectionheading></td></tr>
+  <tr><td><sectionheading>Experience</sectionheading></td></tr>
 </table>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
   <tr><td>
@@ -347,7 +364,7 @@
   </td></tr>
 </table>
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-  <tr><td><sectionheading>Selected Projects</sectionheading></td></tr>
+  <tr><td><sectionheading>Projects</sectionheading></td></tr>
 </table>
 
 <hr/>
@@ -407,6 +424,31 @@
 </table>
 
 <table width="30%" align="center" border="0" cellspacing="0" cellpadding="20">
+  <tbody>
+      <tr>
+          <td style="padding:0px">
+              <br>
+              <div align="center">
+                  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Yu_RA2IUlBbGVk640y6XENl98eHvWDaLIakCNSAexB8&cl=ffffff&w=a"></script>
+              </div>
+          </td>
+      </tr>
+  </tbody>
+</table>
+
+<hr/>
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+  <tr><td><sectionheading>Beyond Research</sectionheading></td></tr>
+</table>
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
+  <tr><td>
+    <p><strong>Sports</strong>: Soccer, Fencing, Snowboarding, Billiards, Badminton</p>
+    <p><strong>Music</strong>: Piano, Guitar (Beginner)</p>
+    <p><strong>Hobbies</strong>: Photography, Reading, Physics</p>
+    <p>Visit my <a href="https://xiaodu-flying.notion.site/Welcome-to-my-blog-1d6df6af187d4b3ea1020fcc73aeec43">personal blog</a> for research insights, photography, and life experiences. (I will try to update more frequently. :)))))</p>  </td></tr>
+</table>
+
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody>
       <tr>
           <td style="padding:0px">
