--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <p align=center>
 <!--    | <a href="assets/cv.pdf">CV</a> |-->
     | <a href="mailto:duzy@zju.edu.cn">Email</a> |
-    <a href="https://scholar.google.com/citations?user=YOUR_SCHOLAR_ID">Google Scholar</a> |
+    <a href="https://scholar.google.com/citations?user=pY1vwigAAAAJ&hl=zh-CN">Google Scholar</a> |
     <br/>
     | <a href="https://github.com/XiaoDu-flying">GitHub</a> | 
     <a href="https://xiaodu-flying.notion.site/Welcome-to-my-blog-1d6df6af187d4b3ea1020fcc73aeec43">Blog</a> |
@@ -155,7 +155,7 @@
         self-evolution, and latent-space reasoning.
       </p>
 
-      <p>Email: xiaodu.flying [AT] gmail.com
+      <p>Email: xiaodu.flying [AT] gmail.com / duzy [AT] zju.edu.cn
       </p>
     </td>
   </tr>
@@ -354,7 +354,7 @@
   <tr><td>
     <p><strong><a href="https://www.alibaba.com/">Taowise @ Taotian (Alibaba Group)</a></strong><br>
     <em>Algorithm Engineer Intern | Jan 2025 – Present</em><br>
-    Focusing on research on new paradigm in multi-agent reasoning enhancement and supervised fine-tuning (SFT) methodologies for large language models. Meanwhile working on advanced AI applications in e-commerce.
+    Focusing on research on new paradigm in multi-agent latent space reasoning enhancement and supervised fine-tuning (SFT) methodologies for large language models. Meanwhile working on advanced AI applications in e-commerce.
     </p>
     
     <p><strong><a href="https://nlp.csai.tsinghua.edu.cn/">THUNLP</a> @ Tsinghua University</strong><br>
@@ -391,28 +391,66 @@
   </tr>
 
   <tr>
-    <td width="40%" valign="top" align="center">
-      <a href="https://github.com/OpenBMB/ChatDev">
-        <img src="images/paper/logo.png" alt="ChatDev & Croto & MACNET" width="90%" style="border-radius:15px;">
-      </a>
-    </td>
-    <td width="60%" valign="top">
-      <p><a href="https://github.com/OpenBMB/ChatDev" id="CHATDEV">
-      <heading>ChatDev & Croto & MACNET</heading></a><br>
-      </p>
-      <p align="justify">
-        Actively contributed to the development of ChatDev with <a href="https://github.com/OpenBMB/ChatDev/"></a> <img src="https://img.shields.io/github/stars/OpenBMB/ChatDev.svg" alt="stars"> and its extended branches, serving as the leader for one key branch.
-      </p>
-      <p>
-      <a href="https://github.com/OpenBMB/ChatDev">code</a> |
-      <a href="https://arxiv.org/abs/2307.07924">paper</a>
-      </p>
-    </td>
-  </tr>
+  <td width="40%" valign="top" align="center">
+    <a href="https://github.com/OpenBMB/ChatDev">
+      <img src="images/paper/logo.png" alt="ChatDev & Croto & MACNET" width="90%" style="border-radius:15px;">
+    </a>
+  </td>
+  <td width="60%" valign="top">
+    <p><a href="https://github.com/OpenBMB/ChatDev" id="CHATDEV">
+    <heading>ChatDev & Croto & MACNET</heading></a><br>
+    </p>
+    <p align="justify">
+      Actively contributed to the development of ChatDev with <a href="https://github.com/OpenBMB/ChatDev/"></a> <img src="https://img.shields.io/github/stars/OpenBMB/ChatDev.svg" alt="stars"> and its extended branches, serving as the leader for one key branch.
+    </p>
+    <p>
+    <a href="https://github.com/OpenBMB/ChatDev">code</a> |
+    <a href="https://arxiv.org/abs/2307.07924">paper</a> |
+    <a href="https://www.agentico.ai/post/google-andrew-ng-on-agentic-ai">Andrew Ng</a> |
+    <a href="https://medium.com/@openbmb/modelbest-adopts-the-llm-based-ai-agents-to-launch-chatdev-its-first-saas-product-fd70f3b969f7">Google DeepMind</a> |
+    <a href="https://medium.com/@openbmb/modelbest-adopts-the-llm-based-ai-agents-to-launch-chatdev-its-first-saas-product-fd70f3b969f7">ModelBest</a> |
+    <a href="https://github.com/OpenBMB/ChatDev">GitHub trending</a>
+    </p>
+  </td>
+</tr>
 
 </table>
 
 <hr/>
+
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+  <tr><td><sectionheading>Awards & Honors</sectionheading></td></tr>
+</table>
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
+  <tr><td>
+    <ul>
+      <li><strong>First-Class Scholarship</strong>, 2024 - Outstanding Graduate Student Award</li>
+      <li><strong>Second-Class Scholarship</strong>, 2023 - Academic Excellence Recognition</li>
+      <li><strong>Second-Class Scholarship</strong>, 2022 - Academic Excellence Recognition</li>
+    </ul>
+  </td></tr>
+</table>
+
+<hr/>
+
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+  <tr><td><sectionheading>Talks & Presentations</sectionheading></td></tr>
+</table>
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
+  <tr><td>
+    <heading>Exchange-of-Thought: Enhancing Large Language Model Capabilities through Cross-Model Communication</heading></a><br>
+    <em>Academic Salon at <a href="https://modelbest.cn/">ModelBest</a> | January 5, 2024</em><br>
+    <div class="paper" id="modelbest_salon">
+    <a href="assets/salon_eot.pdf">slides</a> |
+    <a href="javascript:toggleblock('salon_abs')">abstract</a>
+
+    <p align="justify"> <i id="salon_abs">Recently, Large Language Models (LLMs) have made significant progress in complex reasoning tasks through "Chain of Thought" technology. However, the models' reasoning is often limited by their own understanding and lack of external perspectives. To address this issue, the salon introduced the "Exchange of Thoughts" (EoT) framework, a new framework that enables cross-model communication during problem-solving. Drawing inspiration from network topology, EoT integrates four unique communication paradigms. The research delves into the communication dynamics and quantities associated with each paradigm. To mitigate the risk of erroneous reasoning chains, a confidence assessment mechanism is added to the communication. Experiments on various complex reasoning tasks have proven that EoT significantly surpasses established baselines, highlighting the value of external perspectives in enhancing the performance of LLMs.</i></p>
+    </div>
+  </td></tr>
+</table>
+
+<hr/>
+
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>Academic Service</sectionheading></td></tr>
@@ -475,10 +513,13 @@
 <hr/>
 
 <script xml:space="preserve" language="JavaScript">
+  hideblock('salon_abs');
+</script>
+<script xml:space="preserve" language="JavaScript">
 hideallbibs();
 </script>
 <script xml:space="preserve" language="JavaScript">
-  hideblock('sspo_abs');  <!-- 添加这一行 -->
+  hideblock('sspo_abs');
 </script>
 <script xml:space="preserve" language="JavaScript">
   hideblock('evopatient_abs');
