--- a/index.html
+++ b/index.html
@@ -408,8 +408,7 @@
     <a href="https://arxiv.org/abs/2307.07924">paper</a> |
     <a href="https://www.agentico.ai/post/google-andrew-ng-on-agentic-ai">Andrew Ng</a> |
     <a href="https://medium.com/@openbmb/modelbest-adopts-the-llm-based-ai-agents-to-launch-chatdev-its-first-saas-product-fd70f3b969f7">Google DeepMind</a> |
-    <a href="https://medium.com/@openbmb/modelbest-adopts-the-llm-based-ai-agents-to-launch-chatdev-its-first-saas-product-fd70f3b969f7">ModelBest</a> |
-    <a href="https://github.com/OpenBMB/ChatDev">GitHub trending</a>
+    <a href="https://medium.com/@openbmb/modelbest-adopts-the-llm-based-ai-agents-to-launch-chatdev-its-first-saas-product-fd70f3b969f7">ModelBest</a>
     </p>
   </td>
 </tr>
@@ -461,19 +460,6 @@
   </td></tr>
 </table>
 
-<table width="30%" align="center" border="0" cellspacing="0" cellpadding="20">
-  <tbody>
-      <tr>
-          <td style="padding:0px">
-              <br>
-              <div align="center">
-                  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Yu_RA2IUlBbGVk640y6XENl98eHvWDaLIakCNSAexB8&cl=ffffff&w=a"></script>
-              </div>
-          </td>
-      </tr>
-  </tbody>
-</table>
-
 <hr/>
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
   <tr><td><sectionheading>Beyond Research</sectionheading></td></tr>
@@ -486,7 +472,9 @@
     <p>Visit my <a href="https://xiaodu-flying.notion.site/Welcome-to-my-blog-1d6df6af187d4b3ea1020fcc73aeec43">personal blog</a> for research insights, photography, and life experiences. (I will try to update more frequently. :)))))</p>  </td></tr>
 </table>
 
-<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+<hr/>
+
+<table width="30%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody>
       <tr>
           <td style="padding:0px">
