--- a/index.html
+++ b/index.html
@@ -128,13 +128,14 @@
     </td>
     <td width="70%" valign="top" align="justify">
       <p>
-        I am a first-year graduate student in <strong>Computer Science</strong> at
+        I am a first-year graduate student major in <strong>Computer Science</strong> at
         <a href="https://www.zju.edu.cn/">Zhejiang University</a>. I currently work with <a href="https://zjuvag.org/authors/weichen/">Prof. Wei Chen</a> at
         <a href="https://zjuvai.cn/">ZJUVAI</a> within the <a href="http://www.en.cs.zju.edu.cn/"><strong><em>State Key Laboratory of CAD&CG</em></strong></a>.
+        I am interning with the Taowise team at <a href="https://www.alibaba.com/"><strong>Alibaba</strong></a>.
       </p>
 
       <p>
-        Previously, I was a research assistant on the
+        Previously, I received my Bachelor's degree in computer science at <a href="https://english.jnu.edu.cn/">Jinan University</a>, Guangzhou. I also serve as a research assistant on the
         <a href="https://github.com/OpenBMB/ChatDev">ChatDev</a> project in the
         <a href="https://www.tsinghua.edu.cn">Department of Computer Science and Technology, Tsinghua University</a>,
         advised by <a href="https://nlp.csai.tsinghua.edu.cn/~lzy/">Prof. Zhiyuan Liu</a> and
@@ -472,7 +473,7 @@
     <p>Visit my <a href="https://xiaodu-flying.notion.site/Welcome-to-my-blog-1d6df6af187d4b3ea1020fcc73aeec43">personal blog</a> for research insights, photography, and life experiences. (I will try to update more frequently. :)))))</p>  </td></tr>
 </table>
 
-<hr/>
+
 
 <table width="30%" align="center" border="0" cellspacing="0" cellpadding="20">
   <tbody>
@@ -487,7 +488,7 @@
   </tbody>
 </table>
 
-<hr/>
+
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
     <tr><td><br><p align="right">
@@ -498,7 +499,6 @@
   </td></tr>
 </table>
 
-<hr/>
 
 <script xml:space="preserve" language="JavaScript">
   hideblock('salon_abs');
