--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         I am a first-year graduate student major in <strong>Computer Science</strong> at
         <a href="https://www.zju.edu.cn/">Zhejiang University</a>. I currently work with <a href="https://zjuvag.org/authors/weichen/">Prof. Wei Chen</a> at
         <a href="https://zjuvai.cn/">ZJUVAI</a> within the <a href="http://www.en.cs.zju.edu.cn/"><strong><em>State Key Laboratory of CAD&CG</em></strong></a>.
-        I am interning with the Taowise team at <a href="https://www.alibaba.com/"><strong>Alibaba</strong></a>.
+        I am also interning with the Taowise team at <a href="https://www.alibaba.com/"><strong>Alibaba</strong></a>.
       </p>
 
       <p>
